--- a/.github/workflows/docker-image-test.yml
+++ b/.github/workflows/docker-image-test.yml
@@ -25,7 +25,7 @@ jobs:
         
     - name: Get current date # get the date of the build
       id: date
-      run: echo "name=date::$(date +'%Y-%m-%d--%M-%S')"
+      run: echo "name=date::$(date +'%Y-%m-%d--%M-%S')" >> $GITHUB_ENV
       
     - name: install buildx
       id: buildx
