--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,6 @@
 name: Docker Image CI
 
 on:
-  schedule:
-    - cron: '0 0 1 * *'
   push:
     branches: [ "master" ]
   
@@ -33,4 +31,4 @@ jobs:
         docker buildx build --push \
           --tag ${{ secrets.DOCKER_USER }}/${{secrets.REPO_NAME}}:latest \
           --tag ${{ secrets.DOCKER_USER }}/${{secrets.REPO_NAME}}:master-${{ steps.date.outputs.date }} \
-          --platform linux/amd64,linux/arm/v7,linux/arm64 .
+          --platform linux/amd64,linux/arm64 .
